all-version.yaml
apiVersion: v1
kind: Service
metadata:
  name: nnrf-nfm
  labels:
    app: nnrf-nfm
    service: nnrf-nfm
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: nnrf-nfm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nnrf-nfm-v1
  labels:
    app: nnrf-nfm
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nnrf-nfm
      version: v1
  template:
    metadata:
      labels:
        app: nnrf-nfm
        version: v1
    spec:
      containers:
      - name: nnrf-nfm
        image: localhost:32000/nnrf-nfm-v1:registry
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nnrf-nfm-v2
  labels:
    app: nnrf-nfm
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nnrf-nfm
      version: v2
  template:
    metadata:
      labels:
        app: nnrf-nfm
        version: v2
    spec:
      containers:
      - name: nnrf-nfm
        image: localhost:32000/nnrf-nfm-v2:registry
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nnrf-nfm-v3
  labels:
    app: nnrf-nfm
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nnrf-nfm
      version: v3
  template:
    metadata:
      labels:
        app: nnrf-nfm
        version: v3
    spec:
      containers:
      - name: nnrf-nfm
        image: localhost:32000/nnrf-nfm-v3:registry
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nnrf-disc
  labels:
    app: nnrf-disc
    service: nnrf-disc
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: nnrf-disc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nnrf-disc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nnrf-disc
  template:
    metadata:
      labels:
        app: nnrf-disc
    spec:
      containers:
      - name: nnrf-disc
        image: localhost:32000/nnrf-disc:registry
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
