istio-gateway_vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nrf-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nrf
spec:
  hosts:
  - "*"
  gateways:
  - nrf-gateway
  http:
  - match:
    - uri:
        exact: /nnrf-nfm
    route:
    - destination:
        host: nnrf-nfm
        port:
          number: 8080
