istio-gateway_vservice_weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nnrf-nfm
spec:
  hosts:
    - nnrf-nfm
  http:
  - route:
    - destination:
        host: nnrf-nfm
        subset: v1
      weight: 30
    - destination:
        host: nnrf-nfm
        subset: v2
      weight: 40
    - destination:
        host: nnrf-nfm
        subset: v3
      weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nnrf-nfm
spec:
  host: nnrf-nfm
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
